--- a/ProductCrudKnockOut/ProductCrudKnockOut.csproj
+++ b/ProductCrudKnockOut/ProductCrudKnockOut.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.303.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.5.24306.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0-preview.5.24306.3">
       <PrivateAssets>all</PrivateAssets>
